Fix align top of counter prefix (for FF)

--- a/web.bitRepublic/client/sass/components/_counter.scss
+++ b/web.bitRepublic/client/sass/components/_counter.scss
@@ -23,6 +23,7 @@
 .counter__prefix {
   position: relative;
   display: inline-block;
+  vertical-align: top;
 }
 
 .counter__prefix svg {
